--- a/style/main.scss
+++ b/style/main.scss
@@ -14,7 +14,7 @@ $bright-text-color: #f9f6f2;
 
 $tile-color: #eee4da;
 $tile-gold-color: #edc22e;
-$tile-gold-glow-color: lighten($tile-gold-color, 15%);
+$tile-gold-glow-color: darken($tile-gold-color, 15%);
 
 $game-container-background: #bbada0;
 
@@ -65,7 +65,9 @@ h1.title {
   text-align: right;
 }
 
-.score-container, .best-container {
+.score-container,
+.best-container,
+.times-best-container {
   $height: 25px;
 
   position: relative;
@@ -113,6 +115,35 @@ h1.title {
 
 .best-container:after {
   content: "Best"
+}
+.times-best-container {
+  display: block;
+  height: initial;
+  padding: 25px 25px 15px;
+  font-size: 16px;
+  line-height: 16px;
+  margin: 0 auto;
+  white-space: nowrap;
+  &:after {
+    content: "Best Times";
+  }
+}
+.times-best {
+  text-align: right;
+
+  .block {
+    display: inline-block;
+    background-color: #888;
+    padding: 3px;
+    margin: 2px;
+    width: 50px;
+    text-align: center;
+  }
+}
+
+.third {
+  display: inline-block;
+  width: 33%;
 }
 
 p {
@@ -171,7 +202,7 @@ hr {
 // Game field mixin used to render CSS at different width
 @mixin game-field {
   .game-container {
-    margin-top: 40px;
+    margin-top: 20px;
     position: relative;
     padding: $grid-spacing;
 
@@ -337,10 +368,10 @@ hr {
                    #fc5e2e true, // 16
                    #ff3333 true, // 32
                    #ff0000 true, // 64
-                   false true, // 128
-                   false true, // 256
-                   false true, // 512
-                   false true, // 1024
+                   #86D6A0 true, // 128
+                   #40B64B true, // 256
+                   #2E7699 true, // 512
+                   #4959AF true, // 1024
                    false true; // 2048
 
   // Build tile colors
@@ -447,7 +478,7 @@ hr {
 }
 
 .game-intro {
-  margin-bottom: 0;
+  margin: 20px 0;
 }
 
 .game-explanation {
