--- a/style/main.css
+++ b/style/main.css
@@ -737,4 +737,18 @@ hr {
     line-height: 30px !important;
     margin-top: 90px !important; }
   .game-message .lower {
-    margin-top: 30px !important; } }
+    margin-top: 30px !important; }
+
+  .times-best-container {
+    white-space: initial; }
+
+  .third {
+    width: 100%; }
+
+  .timer {
+    margin-left: 50px; }
+
+  #times-best-notifier.notify {
+    width: 85%;
+    top: 130px;
+    font-size: 30px; } }
