--- a/style/main.scss
+++ b/style/main.scss
@@ -567,4 +567,19 @@ hr {
       margin-top: 30px !important;
     }
   }
+
+  .times-best-container {
+    white-space: initial;
+  }
+  .third {
+    width: 100%;
+  }
+  .timer {
+    margin-left: 50px;
+  }
+  #times-best-notifier.notify {
+    width: 85%;
+    top: 130px;
+    font-size: 30px;
+  }
 }
